# pcldapy

./: .gitignore  CITATION.cff  LICENCE  README.md  pyproject.toml  requirements.txt
.github/workflows/: prerelease.yml
docs/: index.html  pcldapy.html  search.js
docs/pcldapy/: pclda.html
inst/examples/: ap_prior.txt  lda_from_text.py  lda_from_text_with_priors.py
inst/extdata/: 100ap.txt
pcldapy/: pclda.py
